apps/staging/bookinfo/virtualservice.enc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: bookinfo
spec:
    hosts:
        - ENC[AES256_GCM,data:BVU71I51+CJ6YiefmMqK/12FIfizEZAz,iv:KCsMcZp4XcWiLjh6IJ2K9hnOeWrBjrDmEqPEL8AtBd4=,tag:XV3AAz/lxSk5C1BmwUOjJw==,type:str]
    gateways:
        - istio-ingress/ingress-gateway
    http:
        - match:
            - uri:
                prefix: /
          route:
            - destination:
                host: productpage.bookinfo.svc.cluster.local
                port:
                    number: 9080
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2022-12-24T12:04:10Z"
    mac: ENC[AES256_GCM,data:56lytDBM4qHSCwKEnyUzxh5RD2+wRqXoIHTuODWdH5m9Ss+PwkEKdLjCgdK55RI+CC7riGFbe2vrVsEs2ko/GNDEOEcmaDOuTwso+wW9vAXjm2y+xlu6d78Yp5eJA+w2mk3jmhGW41w+wXBADcBrcO5GwGBbh0lqp/LoP4J64BU=,iv:01yJhArsP7pVuegQE/dcfQ8MTMjmF3twG9WeZbXW07U=,tag:OLcqfp2hNumrLz9iaMumUQ==,type:str]
    pgp:
        - created_at: "2022-12-24T12:04:09Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA38T7Az157GMAQ//f05v2D4ejjsO3TDcU3/IaD60LbzOmi3xK75owf+xJvDO
[...]
            =O6Zp
            -----END PGP MESSAGE-----
          fp: 129994A38E40322EE2A4FA6CB59C51DA13B1BF22
    encrypted_regex: ^(hosts)$
    version: 3.7.3
